// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Pagination works for small dataset: start 1`] = `
"<DocumentFragment>
  0["a","b","c","d","e"]
  <nav
    aria-label="Pagination"
    class="flex items-center justify-end gap-2 mt-4"
    role="navigation"
  >
    <button
      aria-label="Previous page"
      class="p-2 hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white rounded-lg transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
      disabled=""
    >
      ‹
    </button>
    <button
      aria-current="page"
      aria-label="Page 1"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors bg-[#0000001A] dark:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      1
    </button>
    <button
      aria-label="Page 2"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      2
    </button>
    <button
      aria-label="Page 3"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      3
    </button>
    <button
      aria-label="Next page"
      class="p-2 hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white rounded-lg transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
    >
      ›
    </button>
  </nav>
</DocumentFragment>"
`;

exports[`Pagination works for small dataset: middle 1`] = `
"<DocumentFragment>
  1["f","g","h","i","j"]
  <nav
    aria-label="Pagination"
    class="flex items-center justify-end gap-2 mt-4"
    role="navigation"
  >
    <button
      aria-label="Previous page"
      class="p-2 hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white rounded-lg transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
    >
      ‹
    </button>
    <button
      aria-label="Page 1"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      1
    </button>
    <button
      aria-current="page"
      aria-label="Page 2"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors bg-[#0000001A] dark:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      2
    </button>
    <button
      aria-label="Page 3"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      3
    </button>
    <button
      aria-label="Next page"
      class="p-2 hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white rounded-lg transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
    >
      ›
    </button>
  </nav>
</DocumentFragment>"
`;

exports[`Pagination works for small dataset: end 1`] = `
"<DocumentFragment>
  2["k"]
  <nav
    aria-label="Pagination"
    class="flex items-center justify-end gap-2 mt-4"
    role="navigation"
  >
    <button
      aria-label="Previous page"
      class="p-2 hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white rounded-lg transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
    >
      ‹
    </button>
    <button
      aria-label="Page 1"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      1
    </button>
    <button
      aria-label="Page 2"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      2
    </button>
    <button
      aria-current="page"
      aria-label="Page 3"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors bg-[#0000001A] dark:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      3
    </button>
    <button
      aria-label="Next page"
      class="p-2 hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white rounded-lg transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
      disabled=""
    >
      ›
    </button>
  </nav>
</DocumentFragment>"
`;

exports[`Pagination works for small dataset: middle 2`] = `
"<DocumentFragment>
  1["f","g","h","i","j"]
  <nav
    aria-label="Pagination"
    class="flex items-center justify-end gap-2 mt-4"
    role="navigation"
  >
    <button
      aria-label="Previous page"
      class="p-2 hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white rounded-lg transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
    >
      ‹
    </button>
    <button
      aria-label="Page 1"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      1
    </button>
    <button
      aria-current="page"
      aria-label="Page 2"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors bg-[#0000001A] dark:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      2
    </button>
    <button
      aria-label="Page 3"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      3
    </button>
    <button
      aria-label="Next page"
      class="p-2 hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white rounded-lg transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
    >
      ›
    </button>
  </nav>
</DocumentFragment>"
`;

exports[`Pagination works for small dataset: start 2`] = `
"<DocumentFragment>
  0["a","b","c","d","e"]
  <nav
    aria-label="Pagination"
    class="flex items-center justify-end gap-2 mt-4"
    role="navigation"
  >
    <button
      aria-label="Previous page"
      class="p-2 hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white rounded-lg transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
      disabled=""
    >
      ‹
    </button>
    <button
      aria-current="page"
      aria-label="Page 1"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors bg-[#0000001A] dark:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      1
    </button>
    <button
      aria-label="Page 2"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      2
    </button>
    <button
      aria-label="Page 3"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      3
    </button>
    <button
      aria-label="Next page"
      class="p-2 hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white rounded-lg transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
    >
      ›
    </button>
  </nav>
</DocumentFragment>"
`;

exports[`Navigator works for single page 1`] = `
"<DocumentFragment>
  <nav
    aria-label="Pagination"
    class="flex items-center justify-end gap-2 mt-4"
    role="navigation"
  >
    <button
      aria-label="Previous page"
      class="p-2 hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white rounded-lg transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
      disabled=""
    >
      ‹
    </button>
    <button
      aria-current="page"
      aria-label="Page 1"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors bg-[#0000001A] dark:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      1
    </button>
    <button
      aria-label="Next page"
      class="p-2 hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white rounded-lg transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
      disabled=""
    >
      ›
    </button>
  </nav>
</DocumentFragment>"
`;

exports[`Navigator works for lots of pages 1`] = `
"<DocumentFragment>
  <nav
    aria-label="Pagination"
    class="flex items-center justify-end gap-2 mt-4"
    role="navigation"
  >
    <button
      aria-label="Previous page"
      class="p-2 hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white rounded-lg transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
    >
      ‹
    </button>
    <button
      aria-label="Page 1"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      1
    </button>
    <span
      class="text-black dark:text-white"
    >
      ...
    </span>
    <button
      aria-label="Page 6"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      6
    </button>
    <button
      aria-label="Page 7"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      7
    </button>
    <button
      aria-current="page"
      aria-label="Page 8"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors bg-[#0000001A] dark:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      8
    </button>
    <button
      aria-label="Page 9"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      9
    </button>
    <button
      aria-label="Page 10"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      10
    </button>
    <span
      class="text-black dark:text-white"
    >
      ...
    </span>
    <button
      aria-label="Page 13"
      class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white"
    >
      13
    </button>
    <button
      aria-label="Next page"
      class="p-2 hover:bg-[#0000001A] dark:hover:bg-[#FFFFFF1A] text-black dark:text-white rounded-lg transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
    >
      ›
    </button>
  </nav>
</DocumentFragment>"
`;
